<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Tudar</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="signUpInfoAge">Age</string>
    <string name="signUpInfoName">Name</string>
    <string name="signUpInfoWeight">Weight</string>
    <string name="signUpInfoHeight">Height</string>
    <string name="signUpInfoMale">Male</string>
    <string name="signUpInfoFemale">Female</string>
    <string name="signUpInfoFinish">Finish</string>
    <string name="signUpInfoFreqQuestion">How often do you exercise?</string>
    <string name="signUpInfoGender">Gender</string>
    <string name="signUpLoginEmail">Email</string>
    <string name="signUpLoginPassword">Password</string>

    <string name="trainerCertifyId">ID Number</string>
    <string name="trainerCertifyRealName">Real Name</string>
    <string name="trainerCertifyImgUpload">Upload</string>
    <string name="trainerCertifyImgSelect">Choose from gallery</string>
    <string name="trainerCertifyDone">Next</string>
    <string-array name="FrequencyArray">
        <item>Less than once per week</item>
        <item>Once per week</item>
        <item>3-5 times per week</item>
        <item>More than 5 times per week</item>
    </string-array>
    <string-array name="IsStudentArray">
        <item>Student</item>
        <item>Trainer</item>
    </string-array>

    <string name="trainerWaiting">请等待认证通过</string>

    <string name="title_activity_trainer_main">TrainerMainActivity</string>
    <string name="title_article_trainer">文章</string>
    <string name="title_answer_question_trainer">回答问题</string>
    <string name="title_notifications_trainer">个人中心</string>
    <string name="title_private_training_trainer">私教</string>
    <string name="title_home_trainer">Home</string>
    <string name="title_dashboard_trainer">Dashboard</string>

    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="title_article_student">文章</string>
    <string name="title_ask_question_student">提问</string>
    <string name="title_notifications_student">个人中心</string>
    <string name="title_private_training_student">私教</string>
    <string name="title_home_student">Home</string>
    <string name="title_dashboard_student">Dashboard</string>


    <string name="stuMainPrivTrainDiet">饮食计划</string>
    <string name="stuMainPrivTrainExercise">运动计划</string>
    <string name="stuMainPrivTrainSchedule">课程安排</string>
    <string name="stuMainPrivTrainChat">聊天</string>
    <string name="stuMainPrivTrainVideoChat">语音视频</string>
    <string name="stuMainAskEasy">快速提问</string>

    <string name="traMainPrivTrainDiet">饮食计划</string>
    <string name="traMainPrivTrainExercise">运动计划</string>
    <string name="traMainPrivTrainSchedule">课程安排</string>
    <string name="traMainPrivTrainChat">聊天</string>
    <string name="traMainPrivTrainVideoChat">语音视频</string>
    <string name="traMainAnswerEasy">快速回答</string>

    <string name="traViewQuestionBtnAnswer">写回答</string>

    <string name="traAnswerQuestionBtnPublish">发布</string>


</resources>